# build-and-inspect-python-package

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci-argon2-cffi-bindings.yml  ci-structlog.yml  ci-supported-pythons.yml  ci.yml  main.yml  pypa-sample-project.yml  pypa-sampleproject.yml  update-dependencies.yml  upgrade-dependencies.yml  zizmor.yml
requirements/: pip-tools.in  pip-tools.txt  tools.in  tools.txt
