[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
build = "python -Im build"
check-wheel-contents = "python -Im check_wheel_contents"
check-readme = "python -Im twine check --strict"
wheel = "python -Im wheel"

[project]
name = "build-and-inspect-python-package"
version = "0" # we're not an actual package.
description = "Build and Inspect Python Package"
authors = [{ name = "Hynek Schlawack", email = "hs@ox.cx" }]
dependencies = [
    "build>=0.10.0",
    "check-wheel-contents>=0.4.0",
    "twine>=4.0.2",
    "wheel>=0.38.4",
]
license = { text = "MIT" }
requires-python = ">=3.10"
